--- a/oefening_9.html
+++ b/oefening_9.html
@@ -12,16 +12,14 @@
             robotArm.loadLevel("exercise 9");
             
             // Jou instructies volgen hier
-            for (var h = 1; h <= 4; h++) {
-                for (var i = 1; i <= 4; i++) {
-                    for (var j = 1; j <= i; j++) {
-                        robotArm.grab();
-                    }
-                    for (var k = 1; k <= 5; k++) {
+            for (var column = 1; column <= 4; column++) {
+                for (var block = 1; block <= column; block++) {
+                    robotArm.grab();
+                    for (var right = 1; right <= 5; right++) {
                         robotArm.moveRight();
                     }
                     robotArm.drop();
-                    for (var l = 1; l <= 5; l++) {
+                    for (var left = 1; left <= 5; left++) {
                         robotArm.moveLeft();
                     }
                 }
