--- a/oefening_10.html
+++ b/oefening_10.html
@@ -12,21 +12,18 @@
             robotArm.loadLevel("exercise 10");
             
             // Jou instructies volgen hier
-            for (var h = 1; h <= 9; h++) {
-                for (var i = 1; i <= h; i++) {
-                    robotArm.grab();
+            var column = 9;
+            for (var block = 1; block <= 5; block++) {
+                robotArm.grab();
+                for (var right = 1; right <= column; right++) {
                     robotArm.moveRight();
                 }
                 robotArm.drop();
-                for (var j = 1; j <= 8; j++) {
-                    for (var k = 1; k <= j; k++) {
-                        robotArm.moveLeft();
-                    }
+                column = column - 1;
+                for (var left = 1; left <= column; left++) {
+                    robotArm.moveLeft();
                 }
-                robotArm.grab();
-                // for (var l = 1; l <= 1; l++) {
-                //     robotArm.drop();
-                // }
+                column = column - 1;
             }
 
             
