--- a/oefening_12.html
+++ b/oefening_12.html
@@ -25,7 +25,7 @@
                 } else {
                     robotArm.drop();
                 }
-                robotArm.moveRight(); // het volgende blokje wordt gecheck
+                robotArm.moveRight(); // het volgende blokje wordt gecheckt
             }
             
             // De door jou opgegeven instructies uitvoeren
